--- a/configure.ac
+++ b/configure.ac
@@ -126,17 +126,8 @@ AS_IF(
 AC_SUBST(TEST_COVERAGE_CFLAGS)
 
 #### Find OpenSSL
-AC_MSG_CHECKING([for --with-openssl])
-AC_ARG_WITH(
-	[openssl],
-	[AS_HELP_STRING([--with-openssl],[/absolute/path/to/openssl-base])],
-	[ LDFLAGS="$LDFLAGS -L$with_openssl/lib";
-	  CPPFLAGS="$CPPFLAGS -I$with_openssl/include/";
-	  LIBS="-lssl";
-	  AC_MSG_RESULT([$with_openssl])
-	],
-	[AC_MSG_RESULT([no])]
-)
+
+AX_CHECK_OPENSSL
 
 AC_CHECK_LIB([crypto],[CRYPTO_new_ex_data], [], [AC_MSG_ERROR([OpenSSL libraries required])])
 AC_CHECK_LIB([ssl],[SSL_library_init], [], [AC_MSG_ERROR([OpenSSL libraries required])])
